
buildscript {
    repositories {
        mavenCentral()
        maven {
            url 'https://plugins.gradle.org/m2'
        }
    }
    dependencies {
       classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:latest.release'
       classpath 'org.gretty:gretty:3.0.1'
    }
}

plugins {
    id 'nebula.netflixoss' version '9.3.0'

}


ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name

/*apply from: file('gradle/convention.gradle')
apply from: file('gradle/maven.gradle')
apply from: file('gradle/check.gradle')
apply from: file('gradle/license.gradle')
apply from: file('gradle/release.gradle')
*/

allprojects {
    
    // https://www.developerfeed.com/how-do-disable-low-level-logging-apache-common-packages/

    // handy command display all transitive dependencies of each subproject
    task allDeps(type: DependencyReportTask) {}
}

subprojects {
    apply plugin: 'nebula.netflixoss'
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'eclipse'
    apply plugin: 'pmd'

    group = "com.netflix.${githubProjectName}"

    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'

    repositories {
        mavenCentral()
        /**
         * This repository locates artifacts that don't exist in maven central but we had to backup from jcenter or palantir repositories
         * The exclusiveContent makes sure that we don't hit this repository for other dependencies
         */
        exclusiveContent {
            forRepository {
                maven {
                    url "https://artifactory-oss.prod.netflix.net/artifactory/required-jcenter-modules-backup"
                }
            }
            filter {
                includeGroupByRegex "com\\.palantir\\.docker.*"
            }
        }
    }

    dependencies {
      //StringUtils
      compile 'commons-lang:commons-lang:2.6'

      //Jersey & Servlet
      compileOnly 'javax.servlet:servlet-api:2.5'

      //Logging
      compile 'org.slf4j:slf4j-api:1.6.1'
      compile 'org.slf4j:slf4j-log4j12:1.6.1'

      // Archaius-2
      compile group: 'com.netflix.archaius', name: 'archaius2-core', version: '2.1.11'
      compile group: 'com.netflix.archaius', name: 'archaius2-api', version: '2.1.11'

      compile 'org.apache.commons:commons-lang3:3.3.2'

      //Unit Testing
      testCompile 'org.jmockit:jmockit:1.19'
      testCompile 'junit:junit:latest.release'

      //Google Injections
      compile  'com.google.inject:guice:4.0'
      compile  'com.google.inject.extensions:guice-multibindings:4.0'

      compile  'javax.inject:javax.inject:1'

    }

    pmd {
        ignoreFailures = true
    }
}
